- weather interface finish - location service finish - todo - attachment in note

--- a/Notes app/Info.plist
+++ b/Notes app/Info.plist
@@ -68,5 +68,9 @@
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
+	<key>NSLocationAlwaysUsageDescription</key>
+    	<string>Your location is required for weather loading</string>
+    	<key>NSLocationWhenInUseUsageDescription</key>
+    	<string>Your location is required for weather loading</string>
 </dict>
 </plist>
