--- a/Notes app/Info.plist
+++ b/Notes app/Info.plist
@@ -72,5 +72,9 @@
 	<string>Your location is required for weather loading</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Your location is required for weather loading</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This app wants to take pictures.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app wants to use your photos.</string>
 </dict>
 </plist>
